--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
  <meta thhp-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2103/2103665.png">
+  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="22db923e-251f-4b1e-92ee-411f746f75db";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,8 +33,9 @@
   border-radius: 50%;
 }
     header {
+      box-shadow: 0 4px 8px #9f2d2de8;
       font-family: 'Courier New', Courier, monospace;
-      background-image: 11/rr.jpg;
+      background-color: #32363ec4;
       color: #fff;
       padding: 15px;
       text-align: center;
@@ -58,7 +60,7 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 textarea{
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(0, 0, 0, 0.66);
     color: white;
 
 
@@ -115,15 +117,14 @@ input{
     }
 
     button {
-      background-color:#d3256fed ;
+      background-color:#9f2d2dfa ;
       color: #fff;
       padding: 10px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
       font-size: 16px;
-      transition: background-color 2s;
-    
+      transition: background-color 0.3s;
     }
 
     button:hover {
@@ -294,6 +295,6 @@ input{
       });
     }
   </script>
-<script src="//code.tidio.co/auzynvkjjcfuxbtphzzkf5bnftr89elh.js" async></script>
+
 </body>
 </html>
